Fix left and right side buttons' spacing

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ header h1 {
 .left {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     height: 85vh;
 }
 
@@ -98,7 +98,6 @@ header h1 {
     grid-column-end: 3;
     background-color: #ffd3b5;
     padding: 5px 40px 5px 40px;
-    align-self: end;
     border-radius: 5%;
     box-shadow: 0px 0px 10px 2px #df666e;
 
